--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -19,8 +19,9 @@
     <body>
         <div id="room" class="content">
             <header>
-                <a href="/">
-                    <img src="/images/logo.svg" alt="Rocket.Q Logo"/>
+                <a href="#">                  
+                    <img src="/images/icon-logo.svg" alt="Rocket.Q Logo"/>
+                    <h1>rocket</h1><h1>q</h1>
                 </a>
 
                 <div class="buttons">
@@ -143,8 +144,15 @@
             </div><!-- .modal -->
         </div><!-- .modal-wrapper -->
 
-        
-        
+        <!-- BOTTOM THEME -->
 
+        <div class="theme-bottom">
+            <input type="checkbox" name="theme" id="switch">
+            <label for="switch">Toggle</label>
+        </div>
+
+        
+        
+        <script src="/scripts/theme.js"></script>
     </body>
 </html>
